# lpcperipheral

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: test.yml
lpcperipheral/: io_space.py  ipmi_bt.py  lpc2wb.py  lpc_ctrl.py  lpcfront.py  lpcperipheral.py  vuart.py  vuart_joined.py
tests/: ROM.py  clocks.py  helpers.py  test_io_space.py  test_ipmi_bt.py  test_lpc.py  test_lpc2wb.py  test_lpc_ctrl.py  test_vuart.py  test_vuart_joined.py
