[metadata]
name = lpcperipheral
version = 0.0.1
author = Michael Neuling, Anton Blanchard
author_email = mikey@neuling.org, anton@ozlabs.org
description = A simple LPC peripheral, with IPMI BT, Virtual UART and FW DMA
long_description = file: README.md
long_description_content_type = text/markdown
keywords = nmigen
platform = any
license_file = LICENSE
url = https://github.com/OpenPOWERFoundation/lpcperipheral
project_urls =
    Bug Tracker = https://github.com/open-power/lpcperipheral/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: System :: Hardware

[options]
packages = find:
python_requires = >=3.6
test_suite = tests

[flake8]
max-line-length = 120
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/
ignore = E221
